--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '1628517937';
+    var serviceWorkerVersion = '3343790520';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <h1 style="margin: 0 auto;color: black;text-align: center;">Loading</h1>
   <script>
     window.addEventListener('load', function (ev) {
       // Download main.dart.js
